# function-rotator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build-debug.bat  build-debug.sh  build.bat  build.sh  function-rotator.sln  function-rotator.vcxproj
res/shaders/: fDefault.glsl  fragment.glsl  vDefault.glsl  vertex.glsl
src/: Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  function.h  glad.c  main.cpp  mesh.h  shader.h  utils.h
